GNOME Bugzilla – Bug 770574
Fix reporting bridge being disabled
Last modified: 2016-08-29 20:54:01 UTC
Created attachment 334401 [details] [review] proposed fix Hello, We have had a report of systematic java startup crashes: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=824226#22 Investigation has shown that in his environment, the accessibility bus does not work for some reason. But that should not make Java applications crash. It happens that java-atk-wrapper does not really check that the at-spi initialization really went fine (or was disabled). When later java-atk-wrapper calls at-spi functions, horrible things can happen. In the patch proposed here, atk_bridge_adaptor_init is made to return -1 also when the bridge is disabled, to avoid letting java think it initialized fine. Samuel
Looks okay to me. Pushed to master: 1cff8f Thanks for the patch.