atk_bridge_adaptor_init: return -1 if NO_AT_BRIDGE is set

This will give the caller a clue that the bridge hasn't
initialized.

https://bugzilla.gnome.org/show_bug.cgi?id=770574